# doc/api.yml
@@ -957,12 +957,19 @@ paths:
           $ref: '#/components/responses/429'
         '500':
           $ref: '#/components/responses/500'
+  /places/{place_id}/events:
     put:
       tags:
         - Attending
       summary: create or update events
       description: Update events when `id` are provided and create events otherwise.
-      operationId: putEvents
+      operationId: saveOrUpdateEvents
+      parameters:
+        - name: place_id
+          in: path
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         description: Events to update
@@ -1292,11 +1299,6 @@ components:
           type: string
         finish_time:
           type: string
-        supervisor:
-          type: string
-          enum:
-            - TEACHER
-            - ADMINISTRATOR
         status:
           type: string
           enum:
@@ -1304,8 +1306,6 @@ components:
             - CANCELED
             - FINISHED
         place_id:
-          type: string
-        group_id:
           type: string
     Event:
       type: object
